--- a/P167C6795.opf/meta.yml
+++ b/P167C6795.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     745178a6d3a4448b9e4d937314c2b681:
       base_file: v047.txt
       image_group_id: I1PD95892
-      title: ''
+      title: ཁྲོ་བོ་རེག་ཚིག་གི་དམ་ཚིག་གསང་བའི་བསྒྲུབ་ཐབས།
       total_pages: 1464
       volume_number: 47
